--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie App</title>
-    <link rel="stylesheet" href="./css/style.css"> 
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
                         <input type="text" placeholder="movie name..." name="search-string">
                     </div>
                     <div class="mb-3">
-                        <button type="button" name="btn-search">Search</button>
+                        <button type="button" name="btn-search" onclick="searchClick()">Search</button>
                         <button type="button" name="btn-a2z">A-Z</button>
                         <button type="button" name="btn-z2a">Z-A</button>
                     </div>
@@ -110,6 +110,8 @@
         </section>
         <!-- End of Delete movie -->
     </main>
+    <script src="./js/movie.list.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
